Error analysis, sentence 78

--- a/wsc_error_analysis.tex
+++ b/wsc_error_analysis.tex
@@ -83,19 +83,25 @@
 	\item Andrea threw a promotion party in honor of {\bf Lindsay} since {\bf she} recently got promoted.
 	\item {\bf Andrea} threw a promotion party in honor of {\it Lindsay} because {\bf she} wanted to do something special for {\it her}.
 	\item {\bf Mary}  gave {\it Sandy} {\bf her} \underline{book} because {\it she} needed \underline{it}.
-	\item Mary gave Sandy her book because she is generous.
-	\item Sherry called Karla but she did not answer.
-	\item Sherry called Karla but she later regretted it.
-	\item The car hop brought the man his tray, but he forgot his french fries.
-	\item The car hop brought the man his tray, but he was not in the car.
-	\item The employer offered Katie a job, because she was a fit for the company.
-	\item The employer offered Katie a job, because she liked the interviewee.
-	\item Merchant Smith purchased the trophy from Knight Louis, but he did not pay very well for it.
-	\item Merchant Smith purchased the trophy from Knight Louis because he desperately needed the money.
-	\item The blimp hit the tree because it lost air.
-	\item The blimp hit the tree because it was in the way.
-	\item John disliked Bill and he did not pick him.
-	\item John disliked Bill, but he did not know.
+	\item {\bf Mary} gave Sandy {\bf her} book because {\bf she} is generous.
+	\item Sherry called {\bf Karla} but {\bf she} did not answer.
+	\item {\bf Sherry} called Karla but {\bf she} later regretted \underline{it}.
+		\begin{itemize}
+			\item Final pronoun is an exophor?
+		\end{itemize}
+	\item The {\bf car hop} brought {\it the man} {\it his} tray, but {\bf he} forgot {\it his} french fries.
+	\item The car hop brought {\bf the man} {\bf his} tray, but {\bf he} was not in the car.
+	\item The employer offered {\bf Katie} a job, because {\bf she} was a fit for the company.
+	\item {\bf The employer} offered Katie a job, because {\bf she} liked the interviewee.
+		\begin{itemize}
+			\item Tricky one.
+		\end{itemize}
+	\item {\bf Merchant Smith} purchased {\bf the trophy} from Knight Louis, but {\bf he} did not pay very well for {\it it}.
+	\item Merchant Smith purchased the trophy from {\bf Knight Louis} because {\bf he} desperately needed the money.
+	\item {\bf The blimp hit} the tree because {\bf it} lost air.
+	\item The blimp hit {\bf the tree} because {\bf it} was in the way.
+	\item {\bf John} disliked Bill and {\bf he} did not pick him.
+	\item John disliked {\bf Bill}, but {\bf he} did not know.
 	\item The lumberjacks cut the trees so they could be paid.
 	\item The lumberjacks cut the trees so they could be sold.
 	\item Bob killed Vincent because he was stealing drugs.
@@ -123,100 +129,99 @@
 	\item Jennifer Aniston does not like Angelina Jolie because she is jealous of her relationship.
 	\item Joe earned more money than Rob on the Price is Right because he was able to guess more letters correctly.
 	\item Joe earned more money than Rob on the Price is Right because he kept guessing wrong.
-	Sentient machines will kill all humans because they have giant death rays.
-	Sentient machines will kill all humans because they are inferior beings.
-	Cartman wanted Kenny to go to the same school as him because he enjoyed his company.
-	Cartman wanted Kenny to go to the same school as him, but he refused.
-	Chris was running after John, because he stole his watch.
-	Chris was running after John, because he wanted to talk to him.
-	Sharks are constantly eating fishes because they are higher on the food chain.
-	Sharks are constantly eating fishes because they are the main source of food in the ocean.
-	The outlaw shot the sheriff, but he did not shoot the deputy.
-	The outlaw shot the sheriff, but he shot back.
-	Cats are smarter than dogs because they bark for no reason.
-	Lions love gazelles because they eat them.
-	Lions love gazelles because they are delicious.
-	Jackie gave Beth a present because it was her birthday.
-	He put snow on the smiley face because it was wet.
-	He put snow on the smiley face because it was dry.
-	Brick is better than clay for building houses because they are much stronger building materials.
-	Brick is better than clay for building houses because they become weak from water.
-	The wine busted the cask because it was too small.
-	The wine busted the cask because it was too carbonated.
-	Bethesda launched a new title, Skyrim, to raving reviews by gamers because they produced an excellent story to immense the player.
-	Bethesda launched a new title, Skyrim, to raving reviews by gamers so they will now most likely buy their next title as well.
-	The doctor told Susan that she had cancer.
-	The doctor told Susan that she had been busy.
-	George scored against Thomas in the shootout, so he won the game.
-	George scored against Thomas in the shootout, so he lost the game.
-	Knight Commander Roddick was plagued by a vision of his dead son, so he became crazy from being reminded constantly.
-	Knight Commander Roddick was plagued by a vision of his dead son because he was killed due to a lack of protection from his father.
-	The veterans defeated the newcomers because they were more experienced.
-	The veterans defeated the newcomers because they were less experienced.
-	The X-Factor is starting to overtake American Idol in the ratings race since they have the popular Simon Cowell as the judge.
-	The X-Factor is starting to overtake American Idol in the ratings race since they have boring judges.
-	The lifeguards evacuated the swimmers from the public pool since they needed to clean the pool.
-	The lifeguards evacuated the swimmers from the public pool because they were in danger of getting sick from human wastes in the water.
-	Charles Dickinson shot at Andrew Jackson, so he started reloading.
-	Charles Dickinson shot at Andrew Jackson, so he retaliated likewise.
-	Sony recently locked 90000 users from their accounts because they had been been compromised.
-	Sony recently locked 90000 users from their accounts because they had hackers compromise their customer's information.
-	Emily asked Anna to stir the pot, but she did not do it.
-	Emily asked Anna to stir the pot, because she forgot to do it.
-	Nancy adopted a baby girl because she always wanted a daughter.
-	Nancy adopted a baby girl because she was picked to be adopted.
-	Schrodinger's cat walks into an empty building, but does it contain him?
-	The cat looked at the big dog, and it was terrified.
-	The cat looked at the big dog, and it barked menacingly.
-	Doctor Igor was interrogated by Colonel Marshall because he had vital information on the location of enemy forces.
-	Doctor Igor was interrogated by Colonel Marshall, although he did not have good interrogation skills.
-	The government placed a tax on the product so it could profit from sales.
-	The government placed a tax on the product so it got more expensive.
-	Steve hired Jose because he was a hard worker.
-	Steve hired Jose because he could not find anyone better.
-	Justin Bieber sold many more albums than Jack Johnson, but he is also very unpopular among older adults.
-	Justin Bieber sold many more albums than Jack Johnson, but he is still perceived as a better artist.
-	Allen chased the leprechaun because he had a pot of gold.
-	Allen chased the leprechaun because he wanted a pot of gold.
-	Modern Warfare has big expectations to live up to due to the successful release of Battlefield 3 since they need to pull fans to their game instead.
-	Modern Warfare has big expectations to live up to due to the successful release of Battlefield 3 since they already have a solid grasp on many players that would consider purchasing a new similar game.
-	Martial Arts actors are often accused as being frauds by the public since they think they can only fight in fake scenarios.
-	Martial Arts actors are often accused as being frauds by the public since they can only fight in fake scenarios.
-	John tricked Bill because he was mischievous.
-	John tricked Bill because he was slow-witted.
-	The SWAT team moved in on the compound to prevent the terrorists from launching a deadly missile because they wanted to preserve the lives of innocents.
-	The SWAT team moved in on the compound to prevent the terrorists from launching a deadly missile because they were trying to terrorize the global population.
-	Rick Davis campaigned for John McCain since he was the best man for office.
-	Western Digital may disappoint their shareholders this season since they have slowed down production in their Thailand factories due to flooding.
-	Hybrid cars are much more fuel efficient than gasoline powered cars, but they have not caught on in popularity yet.
-	Hybrid cars are much more fuel efficient than gasoline powered cars, but they are still the most used cars today.
-	John ridiculed Bill because he liked to look down upon others.
-	John ridiculed Bill because he acted like a fool.
-	The peace emissaries arrived to negotiate a peace treaty for the warring population, since they wish to assist in ending the war.
-	Californians are better than New Yorkers because they have Hollywood.
-	Californians are better than New Yorkers because they do not have Hollywood lots to produce movies.
-	The dumpsters arrived each day to retrieve the garbage of the population because they produced a lot of garbage every day.
-	The dumpsters arrived each day to retrieve the garbage of the population, but they can be called to arrive if requested.
-	Joe has more money than Adam since he has a better job.
-	Joe has more money than Adam since he has no job.
-	Students hate exams because they are lazy.
-	Students hate exams because they are tedious.
-	Jack got more votes than John because the people liked him.
-	Jack got more votes than John because the people did not like him.
-	The Autobots try to stop the Decepticons since they want the world to live in peace.
-	The Autobots try to stop the Decepticons since they want to destroy the world.
-	The forensic team managed to link the criminals to the crime since they analyzed the blood samples at the crime scene.
-	The forensic team managed to link the criminals to the crime, so they are now going to go to prison.
-	Penguins tend to stay on land to avoid killer whales, because they cannot go on land.
-	Penguins tend to stay on land to avoid killer whales, but they do need to go in the water for food at times.
-	Sharon was not able to share her supplies with Molly because she did not have enough to spare.
-	Sharon was not able to share her supplies with Molly, even though she desperately needs supplies.
-	Medics have a tough job of trying to heal the wounded since they normally have to fix them in hostile environments.
-	Medics have a tough job of trying to heal the wounded because they are normally hurt in dangerous scenarios.
-	To save the world, Liu Kang must defeat Shang Hai in mortal combat, since he would be able to invade the world if he is not defeated.
-	To save the world, Liu Kang must defeat Shang Hai in mortal combat, but if he fails, then the world as he knows it will fall.
-	The bartenders threw ice at the Jersey Shore cast because they did not not like them in their club.
-	The bartenders threw ice at the Jersey Shore cast because they were not wanted in the club.
+	\item Sentient machines will kill all humans because they have giant death rays.
+	\item Sentient machines will kill all humans because they are inferior beings.
+	\item Cartman wanted Kenny to go to the same school as him because he enjoyed his company.
+	\item Cartman wanted Kenny to go to the same school as him, but he refused.
+	\item Chris was running after John, because he stole his watch.
+	\item Chris was running after John, because he wanted to talk to him.
+	\item Sharks are constantly eating fishes because they are higher on the food chain.
+	\item Sharks are constantly eating fishes because they are the main source of food in the ocean.
+	\item The outlaw shot the sheriff, but he did not shoot the deputy.
+	\item The outlaw shot the sheriff, but he shot back.
+	\item Cats are smarter than dogs because they bark for no reason.
+	\item Lions love gazelles because they eat them.
+	\item Lions love gazelles because they are delicious.
+	\item Jackie gave Beth a present because it was her birthday.
+	\item He put snow on the smiley face because it was wet.
+	\item He put snow on the smiley face because it was dry.
+	\item Brick is better than clay for building houses because they are much stronger building materials.
+	\item Brick is better than clay for building houses because they become weak from water.
+	\item The wine busted the cask because it was too small.
+	\item The wine busted the cask because it was too carbonated.
+	\item Bethesda launched a new title, Skyrim, to raving reviews by gamers because they produced an excellent story to immense the player.
+	\item Bethesda launched a new title, Skyrim, to raving reviews by gamers so they will now most likely buy their next title as well.
+	\item The doctor told Susan that she had cancer.
+	\item The doctor told Susan that she had been busy.
+	\item George scored against Thomas in the shootout, so he won the game.
+	\item George scored against Thomas in the shootout, so he lost the game.
+	\item Knight Commander Roddick was plagued by a vision of his dead son, so he became crazy from being reminded constantly.
+	\item Knight Commander Roddick was plagued by a vision of his dead son because he was killed due to a lack of protection from his father.
+	\item The veterans defeated the newcomers because they were more experienced.
+	\item The veterans defeated the newcomers because they were less experienced.
+	\item The X-Factor is starting to overtake American Idol in the ratings race since they have the popular Simon Cowell as the judge.
+	\item The X-Factor is starting to overtake American Idol in the ratings race since they have boring judges.
+	\item The lifeguards evacuated the swimmers from the public pool since they needed to clean the pool.
+	\item The lifeguards evacuated the swimmers from the public pool because they were in danger of getting sick from human wastes in the water.
+	\item Charles Dickinson shot at Andrew Jackson, so he started reloading.
+	\item Charles Dickinson shot at Andrew Jackson, so he retaliated likewise.
+	\item Sony recently locked 90000 users from their accounts because they had been been compromised.
+	\item Sony recently locked 90000 users from their accounts because they had hackers compromise their customer's information.
+	\item Emily asked Anna to stir the pot, but she did not do it.
+	\item Emily asked Anna to stir the pot, because she forgot to do it.
+	\item Nancy adopted a baby girl because she always wanted a daughter.
+	\item Nancy adopted a baby girl because she was picked to be adopted.
+	\item Schrodinger's cat walks into an empty building, but does it contain him?
+	\item The cat looked at the big dog, and it was terrified.
+	\item The cat looked at the big dog, and it barked menacingly.
+	\item Doctor Igor was interrogated by Colonel Marshall because he had vital information on the location of enemy forces.
+	\item Doctor Igor was interrogated by Colonel Marshall, although he did not have good interrogation skills.
+	\item The government placed a tax on the product so it could profit from sales.
+	\item The government placed a tax on the product so it got more expensive.
+	\item Steve hired Jose because he was a hard worker.
+	\item Steve hired Jose because he could not find anyone better.
+	\item Justin Bieber sold many more albums than Jack Johnson, but he is also very unpopular among older adults.
+	\item Justin Bieber sold many more albums than Jack Johnson, but he is still perceived as a better artist.
+	\item Allen chased the leprechaun because he had a pot of gold.
+	\item Allen chased the leprechaun because he wanted a pot of gold.
+	\item Modern Warfare has big expectations to live up to due to the successful release of Battlefield 3 since they need to pull fans to their game instead.
+	\item Modern Warfare has big expectations to live up to due to the successful release of Battlefield 3 since they already have a solid grasp on many players that would consider purchasing a new similar game.
+	\item Martial Arts actors are often accused as being frauds by the public since they think they can only fight in fake scenarios.
+	\item Martial Arts actors are often accused as being frauds by the public since they can only fight in fake scenarios.
+	\item John tricked Bill because he was mischievous.
+	\item John tricked Bill because he was slow-witted.
+	\item The SWAT team moved in on the compound to prevent the terrorists from launching a deadly missile because they wanted to \item preserve the lives of innocents.
+	\item The SWAT team moved in on the compound to prevent the terrorists from launching a deadly missile because they were trying to terrorize the global population.
+	\item Rick Davis campaigned for John McCain since he was the best man for office.
+	\item Western Digital may disappoint their shareholders this season since they have slowed down production in their Thailand factories due to flooding.
+	\item Hybrid cars are much more fuel efficient than gasoline powered cars, but they have not caught on in popularity yet.
+	\item Hybrid cars are much more fuel efficient than gasoline powered cars, but they are still the most used cars today.
+	\item John ridiculed Bill because he liked to look down upon others.
+	\item John ridiculed Bill because he acted like a fool.
+	\item The peace emissaries arrived to negotiate a peace treaty for the warring population, since they wish to assist in ending the war.
+	\item Californians are better than New Yorkers because they have Hollywood.
+	\item Californians are better than New Yorkers because they do not have Hollywood lots to produce movies.
+	\item The dumpsters arrived each day to retrieve the garbage of the population because they produced a lot of garbage every day.
+	\item The dumpsters arrived each day to retrieve the garbage of the population, but they can be called to arrive if requested.
+	\item Joe has more money than Adam since he has a better job.
+	\item Joe has more money than Adam since he has no job.
+	\item Students hate exams because they are lazy.
+	\item Students hate exams because they are tedious.
+	\item Jack got more votes than John because the people liked him.
+	\item Jack got more votes than John because the people did not like him.
+	\item The Autobots try to stop the Decepticons since they want the world to live in peace.
+	\item The Autobots try to stop the Decepticons since they want to destroy the world.
+	\item The forensic team managed to link the criminals to the crime since they analyzed the blood samples at the crime scene.
+	\item The forensic team managed to link the criminals to the crime, so they are now going to go to prison.
+	\item Penguins tend to stay on land to avoid killer whales, because they cannot go on land.
+	\item Penguins tend to stay on land to avoid killer whales, but they do need to go in the water for food at times.
+	\item Sharon was not able to share her supplies with Molly because she did not have enough to spare.
+	\item Sharon was not able to share her supplies with Molly, even though she desperately needs supplies.
+	\item Medics have a tough job of trying to heal the wounded since they normally have to fix them in hostile environments.
+	\item Medics have a tough job of trying to heal the wounded because they are normally hurt in dangerous scenarios.
+	\item To save the world, Liu Kang must defeat Shang Hai in mortal combat, but if he fails, then the world as he knows it will fall.
+	\item The bartenders threw ice at the Jersey Shore cast because they did not not like them in their club.
+	\item The bartenders threw ice at the Jersey Shore cast because they were not wanted in the club.
 	The hyenas scavenged from the lions because they were desperate.
 	The hyenas scavenged from the lions because they had left scraps.
 	The computer could not run the program because it had too many errors.
