--- a/wsc_error_analysis.tex
+++ b/wsc_error_analysis.tex
@@ -9,20 +9,20 @@
 
 % ------------- SHIT STARTS HERE
 \begin{enumerate}
-	\item {\bf Kung Fu teachers} try to pass on discipline to their disciples since {\bf they} want them to learn more than just technique.
-	\item Kung Fu teachers try to pass on discipline to their {\bf disciples}, but {\bf they} do not always learn what they are being taught very well.
-	\item The {\bf lion} saw the fish and {\bf it} pounced.
-	\item The lion saw the {\bf fish} and {\bf it} was swimming.
-	\item The {\bf winners} were given the awards after {\bf they} won.
-	\item The winners were given the {\bf awards} after {\bf they} were made.
+	\item {\bf Kung Fu teachers} try to pass on discipline to {\bf their} {\it disciples} since {\bf they} want {\it them} to learn more than just technique.
+	\item {\bf Kung Fu teachers} try to pass on discipline to {\bf their} {\it disciples}, but {\it they} do not always learn what {\it they} are being taught very well.
+	\item {\bf The lion} saw the fish and {\bf it} pounced.
+	\item The lion saw {\bf the fish} and {\bf it} was swimming.
+	\item {\bf The winners} were given the awards after {\bf they} won.
+	\item The winners were given {\bf the awards} after {\bf they} were made.
 	\item {\bf Lakshman} asked Vivan to get {\bf him} some ice cream because {\bf he} was hot.
 	\item {\bf Lakshman} asked {\it Vivan} to get {\bf him} some ice cream because {\it he} owed {\bf him} money.
-	\item {\bf John} fired {\it Dave} because {\it he} had too many absences.
-	\item {\bf John} fired {\it Dave} because {\bf he} had too many employees.
+	\item John fired {\bf Dave} because {\bf he} had too many absences.
+	\item {\bf John} fired Dave because {\bf he} had too many employees.
 	\item {\bf Bob} kicked Larry, because {\bf he} was mad.
 	\item Bob kicked {\bf Larry}, because {\bf he} made a condescending comment.
-	\item {\bf Gorden} got mad at {\it his brother} because {\it he} forgot to bring {\bf him} chocolate.
-	\item {\bf Gorden} got mad at {\it his brother} because {\bf he} did not get good sleep.
+	\item {\bf Gorden} got mad at {\bf his} {\it brother} because {\it he} forgot to bring {\bf him} chocolate.
+	\item {\bf Gorden} got mad at {\bf his} brother because {\bf he} did not get good sleep.
 	\item {\bf The Prince of Wales} knighted {\it William}, so {\bf he} gave {\bf his} son the accolade with a sword.
 		\begin{itemize}
 			\item This sentence makes very little sense without context. Not sure if it is resolvable.
@@ -102,37 +102,37 @@
 	\item The blimp hit {\bf the tree} because {\bf it} was in the way.
 	\item {\bf John} disliked Bill and {\bf he} did not pick him.
 	\item John disliked {\bf Bill}, but {\bf he} did not know.
-	\item The lumberjacks cut the trees so they could be paid.
-	\item The lumberjacks cut the trees so they could be sold.
-	\item Bob killed Vincent because he was stealing drugs.
-	\item Bob killed Vincent because he wanted to kill someone.
-	\item The cat broke the glass because it was fragile.
-	\item The cat broke the glass because it was clumsy.
-	\item Saturday Night Live often has politicians as one of their main centers of attention since they are what viewers want to see joked about.
-	\item Saturday Night Live often has politicians as one of their main centers of attention because they want to keep viewers entertained.
-	\item The kids asked their neighbors if they could have candy on Halloween.
-	\item The kids asked their neighbors if they had any candy on Halloween.
-	\item Medvedev will cede the presidency to Putin because he is more popular.
-	\item Medvedev will cede the presidency to Putin because he is less popular.
-	\item The scientists gave the chimps some bananas because they were hungry.
-	\item The scientists gave the chimps some bananas because they were ripe.
-	\item Jim Carrey convinced Jeff to travel with him to Aspen, since he wanted to have a travel buddy to visit his girlfriend.
-	\item Jim Carrey convinced Jeff to travel with him to Aspen, since Jim knew that he had wanted to travel to Aspen for a long time.
-	\item Bob sued Bill because he was embezzling funds.
-	\item Bob sued Bill because he wanted more money.
-	\item Microsoft Azure provides cloud servers for consumers because they are providing the infrastructure for a future in cloud computing.
-	\item The mouse ran from the cat all the way to the kitchen because it was scared.
-	\item The mouse ran from the cat all the way to the kitchen because it chased him.
-	\item The Detroit Lions beat the Dallas Cowboys because they had more desire to win.
-	\item The Detroit Lions beat the Dallas Cowboys because they were unprepared.
-	\item Jennifer Aniston does not like Angelina Jolie because she stole her boyfriend.
-	\item Jennifer Aniston does not like Angelina Jolie because she is jealous of her relationship.
-	\item Joe earned more money than Rob on the Price is Right because he was able to guess more letters correctly.
-	\item Joe earned more money than Rob on the Price is Right because he kept guessing wrong.
-	\item Sentient machines will kill all humans because they have giant death rays.
-	\item Sentient machines will kill all humans because they are inferior beings.
-	\item Cartman wanted Kenny to go to the same school as him because he enjoyed his company.
-	\item Cartman wanted Kenny to go to the same school as him, but he refused.
+	\item {\bf The lumberjacks} cut the trees so {\bf they} could be paid.
+	\item The lumberjacks cut {\bf the trees} so {\bf they} could be sold.
+	\item Bob killed {\bf Vincent} because {\bf he} was stealing drugs.
+	\item {\bf Bob} killed Vincent because {\bf he} wanted to kill someone.
+	\item The cat broke {\bf the glass} because {\bf it} was fragile.
+	\item {\bf The cat} broke the glass because {\bf it} was clumsy.
+	\item {\bf Saturday Night Live} often has {\it politicians} as one of {\bf their} main centers of attention since {\it they} are what viewers want to see joked about.
+	\item {\bf Saturday Night Live} often has politicians as one of {\bf their} main centers of attention because {\bf they} want to keep viewers entertained.
+	\item {\bf The kids} asked {\bf their} neighbors if {\bf they} could have candy on Halloween.
+	\item {\bf The kids} asked {\bf their} {\it neighbors} if {\it they} had any candy on Halloween.
+	\item Medvedev will cede the presidency to {\bf Putin} because {\bf he} is more popular.
+	\item {\bf Medvedev} will cede the presidency to Putin because {\bf he} is less popular.
+	\item The scientists gave {\bf the chimps} some bananas because {\bf they} were hungry.
+	\item The scientists gave the chimps some {\bf bananas} because {\bf they} were ripe.
+	\item {\bf Jim Carrey} convinced Jeff to travel with {\bf him} to Aspen, since {\bf he} wanted to have a travel buddy to visit {\bf his} girlfriend.
+	\item {\bf Jim Carrey} convinced {\it Jeff} to travel with {\bf him} to Aspen, since Jim knew that {\it he} had wanted to travel to Aspen for a long time.
+	\item Bob sued {\bf Bill} because {\bf he} was embezzling funds.
+	\item {\bf Bob} sued Bill because {\bf he} wanted more money.
+	\item {\bf Microsoft Azure} provides cloud servers for consumers because {\bf they} are providing the infrastructure for a future in cloud computing.
+	\item {\bf The mouse} ran from the cat all the way to the kitchen because {\bf it} was scared.
+	\item The mouse ran from {\bf the cat} all the way to the kitchen because {\bf it} chased him.
+	\item {\bf The Detroit Lions} beat the Dallas Cowboys because {\bf they} had more desire to win.
+	\item The Detroit Lions beat {\bf the Dallas Cowboys} because {\bf they} were unprepared.
+	\item {\bf Jennifer Aniston} does not like {\it Angelina Jolie} because {\it she} stole {\bf her} boyfriend.
+	\item {\bf Jennifer Aniston} does not like {\it Angelina Jolie} because {\bf she} is jealous of {\it her} relationship.
+	\item {\bf Joe} earned more money than Rob on the Price is Right because {\bf he} was able to guess more letters correctly.
+	\item Joe earned more money than {\bf Rob} on the Price is Right because {\bf he} kept guessing wrong.
+	\item {\bf Sentient machines} will kill all humans because {\bf they} have giant death rays.
+	\item Sentient machines will kill all {\bf humans} because {\bf they} are inferior beings.
+	\item {\bf Cartman} wanted {\it Kenny} to go to the same school as {\bf him} because {\bf he} enjoyed {\it his} company.
+	\item {\bf Cartman} wanted {\it Kenny} to go to the same school as {\bf him}, but {\it he} refused.
 	\item Chris was running after John, because he stole his watch.
 	\item Chris was running after John, because he wanted to talk to him.
 	\item Sharks are constantly eating fishes because they are higher on the food chain.
